--- a/seongjae/전송 계층1.md
+++ b/seongjae/전송 계층1.md
@@ -2,20 +2,19 @@
 
 ### Pipelined protocols
 
-![Untitled](%E1%84%8C%E1%85%A5%E1%86%AB%E1%84%89%E1%85%A9%E1%86%BC%20%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC1%201bf7e6aafd874dfc90cbb5715e764666/Untitled.png)
-
+![Untitled 1](https://github.com/user-attachments/assets/2df6752d-ebb4-414a-82b5-f35fde55a067)
 - 한번에 하나 전송하는거보다 한번에 여러개를 한꺼번에 보내는게 더 빠르다.
 - 종류
     - go-Back-N
     - selective repet
 
-![Untitled](%E1%84%8C%E1%85%A5%E1%86%AB%E1%84%89%E1%85%A9%E1%86%BC%20%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC1%201bf7e6aafd874dfc90cbb5715e764666/Untitled%201.png)
+![Untitled 2](https://github.com/user-attachments/assets/05e15e83-cc7a-4fe6-94be-792449ba6cbc)
 
 - **window** : 한꺼번에 얼마나 보낼 것인지 양의 기준
 - 약간 슬라이딩 윈도우 알고리즘 같은 느낌
 - 해당 윈도우 중 하나가 유실되거나 전송 실패하면 → 그 번호부터 뒤에걸 다시 재전송 (실패 전까지의 범위만큼 뒤로 더 늘려서)
 
-![Untitled](%E1%84%8C%E1%85%A5%E1%86%AB%E1%84%89%E1%85%A9%E1%86%BC%20%E1%84%80%E1%85%A8%E1%84%8E%E1%85%B3%E1%86%BC1%201bf7e6aafd874dfc90cbb5715e764666/Untitled%202.png)
+![Untitled](https://github.com/user-attachments/assets/c9fe049f-276c-47f2-86b1-edff4064be28)
 
 - GBN과 다르게 문제가 발생 시, 재전송해주되 문제가 있던 놈들만 선택해서 재전송해준다.
 - 대신 리시버가 일을 좀 더 해줘야함
