--- a/minwoo/컴퓨터 네트워크 기본1.md
+++ b/minwoo/컴퓨터 네트워크 기본1.md
@@ -1,23 +1,81 @@
-### edge
-- apps
-- hosts
-
-### core
-- routers
-- -network of networks
+컴퓨터네트워크 1주차 질문
 
 
 
+# TCP의 개념을 중심으로 15가지 질문과 답변
 
-### end sys (host)
-- web, email..
+## 질문 1: TCP란 무엇인가요? 특성도 2가지 이상 알려주세요.
+- **답변**: TCP는 두 개의 호스트를 연결하고 데이터 스트림을 교환하게 해주는 네트워크 프로토콜입니다. 신뢰성 있는 데이터 전송을 보장하며, 연결 지향적인 특성을 가집니다.
+
+## 질문 2: TCP와 UDP의 주요 차이점은 무엇인가요?
+- **답변**: TCP는 연결 지향적이고 신뢰성 있는 전송을 제공하는 반면, UDP는 비연결형이며 신뢰성을 보장하지 않습니다. TCP는 흐름 제어와 오류 검출을 수행하지만, UDP는 이를 제공하지 않습니다.
+
+## 질문 3: TCP를 사용하면 좋을 서비스 사례는 어떤 것들이 있을까요?
+- **답변**: TCP는 데이터의 정확성이 중요한 웹 애플리케이션, 이메일 전송, 파일 전송 등에 주로 사용됩니다. 왜냐하면 이러한 상황에서는 데이터 패킷의 순서와 신뢰성이 매우 중요하기 때문입니다.
+
+## 질문 4: 그렇다면 UDP를 사용하면 좋을 서비스 사례는?
+- **답변**: 스트리밍 서비스에서도 UDP의 빠른 전송 속도는 중요한 역할을 합니다. 비디오나 오디오 데이터의 경우, 약간의 패킷 손실이 발생해도 전체적인 사용자 경험에 큰 영향을 주지 않습니다.
+
+## 질문 5: TCP의 3-way handshake에 대해 설명해주세요.
+- **답변**: 클라이언트가 SYN을 보내고, 서버가 SYN-ACK로 응답하며, 마지막으로 클라이언트가 ACK를 보내 연결을 완료합니다.
+
+## 질문 6: TCP의 흐름 제어(flow control)란 무엇인가요?
+- **답변**: TCP의 흐름 제어는 송신자가 수신자의 처리 능력을 초과하는 데이터를 전송하지 않도록 하는 메커니즘입니다. 수신 윈도우 크기를 조절하여 데이터 전송 속도를 제어합니다.
+
+## 질문 7: 송수신 윈도우는 어떤 사항들을 고려하여 데이터 송수신을 고려하나요?
+- **답변**: 네트워크 상태, 패킷 손실률, RTT
+
+## 질문 8: RTT(Round-Trip Time)에 대해서 간략하게 설명해주세요.
+- **답변**: 데이터 패킷이 송신자에서 수신자로 전송되고 다시 송신자에게 돌아오는 데 걸리는 시간입니다. TCP의 타임아웃 설정, 재전송 전략, 혼잡 제어 알고리즘 등에 활용되는 개념입니다.
+
+## 질문 9: TCP keep-alive 메커니즘의 목적은 무엇인가요?
+- **답변**: TCP keep-alive는 연결이 여전히 유효한지 확인하기 위해 사용됩니다. 일정 시간 동안 데이터 교환이 없으면 keep-alive 패킷을 보내 연결 상태를 확인하고, 불필요한 연결을 종료할 수 있습니다.
+
+## 질문 10: TCP 혼잡 제어의 슬로우 스타트에 대해서 가능한 가장 쉽게 설명해주세요. 비유를 들어도 좋습니다.
+- **답변**:
+  - **초기 상태**: 운전자(TCP)가 처음 보는 도로(네트워크)에 진입합니다. 도로 상황을 모르기 때문에 조심스럽게 출발합니다.
+  - **점진적 속도 증가**: 도로가 안전해 보이면 조금씩 속도를 올립니다. TCP도 마찬가지로 네트워크가 안정적이면 데이터 전송 속도를 점차 높입니다.
+  - **빠른 가속**: 문제가 없으면 속도를 기하급수적으로 높입니다. 처음엔 30km/h, 그 다음엔 60km/h, 그 다음엔 120km/h처럼 빠르게 속도를 올립니다.
+  - **한계 감지**: 과속 카메라(네트워크 혼잡)를 만나면 속도를 줄입니다. TCP도 네트워크 혼잡을 감지하면 전송 속도를 조절합니다.
+
+## 질문 11: 네트워크 통신에서 포트 번호는 왜 있는 걸까요?
+- **답변**: 서로 다른 애플리케이션 프로세스를 구분해서 데이터를 적절히 전달하기 위해 사용됩니다.
+
+## 질문 12: 혼잡 제어와 흐름 제어의 차이점은 무엇입니까?
+- **답변**: 혼잡 제어는 네트워크 혼잡 방지를 목표로 전체 네트워크 트래픽과 용량을 처리합니다. 반면에 흐름 제어는 송신자와 수신자 사이의 데이터 흐름을 관리하여 버퍼 오버플로를 방지하고 원활한 데이터 전송을 보장합니다.
+
+## 질문 13: 혼잡 제어의 주요 목표는 무엇입니까?
+- **답변**: 주요 목표는 정체 붕괴를 방지하고, 패킷 손실을 최소화하고, 처리량을 최적화하고, 사용자 간에 공정한 리소스 할당을 유지하는 것입니다.
+
+## 질문 14: 데이터를 패킷으로 분할함으로써 생기는 이점은 어떤 것들이 있을까요?
+- **답변**:
+  - 각 패킷에 오류 검출 코드를 포함하여 전송하고, 수신측에서 오류를 검출하면 해당 패킷만 재전송 요청을 할 수 있습니다. 이를 통해 전체 데이터의 신뢰성을 높일 수 있습니다.
+  - 각 패킷에 암호화를 적용하여 데이터를 보호할 수 있습니다.
+
+## 질문 15: 패킷 교환 방식의 단점은 무엇이 있을까요?
+- **답변**:
+  - 순서 혼란: 패킷들이 각기 다른 경로를 통해 전송되면서 목적지에 도착하는 순서가 달라질 수 있습니다. 이 경우, 수신측에서 패킷을 재조립하는 과정에서 추가적인 지연이 발생하고, 실시간 서비스의 경우에는 품질 저하를 야기할 수 있습니다.
+  - 패킷 캡처: 네트워크 상에서 패킷을 캡처하여 데이터를 도청할 수 있는 위험이 있습니다.
+
+## 질문 16: 네트워크 통신에서 일반적으로 버퍼는 무엇을 의미하나요
+
+- **답변**:
+  - 버퍼는 송신 시스템과 수신 시스템 간의 데이터 처리 속도 차이를 관리하는 데 도움이 됩니다. 예를 들어, 데이터가 빠른 서버에서 느린 클라이언트로 전송되는 경우 버퍼는 클라이언트가 과부하되는 것을 방지하기 위해 데이터를 일시적으로 보유할 수 있습니다.
+
+## 질문 17: TCP는 전송 중 패킷 손실을 어떻게 처리하나요?
 
 
-### client / server model
-- req .. rec
-- web browser, ..
+- **답변**: TCP는 자동 재전송 요청(ARQ)을 통해 패킷 손실을 처리합니다. 패킷이 손실되거나 손상되면 수신자는 해당 패킷에 대한 확인 응답을 보내지 않습니다. 송신자는 확인 응답의 부재를 감지하고(종종 타임아웃 또는 중복 확인 응답 사용), 손실된 패킷을 재전송합니다.
+ 
 
-### peer to peer model
-- skype, torrent
+### 질문 18: TCP의 Slow Start 알고리즘에 대해서 간략하게 설명해주세요.
+
+- **답변**: "Slow Start" 알고리즘은 TCP 혼잡 제어 메커니즘으로, 데이터 전송을 낮은 속도에서 시작하고 패킷 손실이 발생하지 않는 한 점진적으로 전송 속도를 증가시킵니다. 이 접근 방식은 작은 혼잡 창에서 시작하여 각 왕복 시간마다 크기를 두 배로 늘리며, 패킷 손실이 발생하면 속도를 조절하여 네트워크 혼잡을 방지하는 데 도움을 줍니다.
 
 
+
+
+tcp에 대한 간단한 장애상황을 초급 개발자에게 면접 질문으로 제시. 트러블 슈팅의 과정과 문제 해설 포함. 간단한 리눅스 명령어 포함
+
+
+-> 이렇게 하면 실습과제가 후루두ㅜ루루두두
