--- a/dahee/1014.md
+++ b/dahee/1014.md
@@ -20,7 +20,7 @@
 
 **5. 질문: BGP(Border Gateway Protocol)의 주요 특징을 설명해주세요.**
 
-답변: BGP는 인터넷의 근간이 되는 라우팅 프로토콜이에요. AS 간의 라우팅 정보를 교환하는 데 사용되죠. BGP의 주요 특징으로는 경로 벡터 알고리즘을 사용한다는 점, 대규모 네트워크에 적합하다는 점, 그리고 정책 기반 라우팅이 가능하다는 점을 들 수 있어요. 또한 BGP는 안정성을 중요시해서, 라우팅 테이블의 변경을 최소화하려고 해요. 이런 특징들 때문에 BGP는 인터넷 백본에서 널리 사용됩니다.
+답변: BGP는 인터넷의 근간이 되는 라우팅 프로토콜이에요. AS 간의 라우팅 정보를 교환하는 데 사용되죠. BGP의 주요 특징으로는 경로 벡터 알고리즘을 사용한다는 점, 대규모 네트워크에 적합하다는 점, 그리고 정책 기반 라우팅이 가능하다는 점을 들 수 있어요. 또한 BGP는 안정성을 중요시해서, 라우팅 테이블의 변경을 최소화하려고 해요
 
 
 **6. 질문: DHCP의 주요 기능과 장점에 대해 설명해주세요.**
