Update 13. TCP+HTTP일부분 10-30.md

--- a/yeongjin/13. TCP+HTTP일부분 10-30.md
+++ b/yeongjin/13. TCP+HTTP일부분 10-30.md
@@ -71,16 +71,10 @@
 - 하나의 TCP 연결로 여러 요청/응답을 동시에 처리
 - 스트림을 사용하여 요청을 독립적으로 처리
 - HOL(Head of Line) 블로킹 문제 해결
+  (HoL : 서버가 최초의 요청을 처리하는 데 시간이 걸려 응답을 돌려주지 않으면 이어진 요청에 대한 응답도 반환되지 않아 서버의 버퍼가 쓸데없이 소비되는 현상)
 
-# 7. 일반적인 멀티플렉싱과의 차이점
 
-- 일반 멀티플렉싱: 여러 입력 신호를 하나의 채널로 전송
-- HTTP 멀티플렉싱:
-    - 스트림 기반 처리
-    - 우선순위 지정 가능
-    - 양방향 통신 지원
-
-# 8. HTTP 메소드 (GET vs POST)
+# 7. HTTP 메소드 (GET vs POST)
 
 - GET 메소드:
     - 서버로부터 데이터를 조회하는 용도
