Update 13. TCP+HTTP일부분 10-30.md

--- a/yeongjin/13. TCP+HTTP일부분 10-30.md
+++ b/yeongjin/13. TCP+HTTP일부분 10-30.md
@@ -69,7 +69,7 @@
 
 - HTTP/2에서 도입된 핵심 기능
 - 하나의 TCP 연결로 여러 요청/응답을 동시에 처리
-- 스트림을 사용하여 요청을 독립적으로 처리
+- 스트림을 사용하여 요청을 독립적으로 처리 (스트림은 TCP 안의 가상 채널)
 - HOL(Head of Line) 블로킹 문제 해결
   (HoL : 서버가 최초의 요청을 처리하는 데 시간이 걸려 응답을 돌려주지 않으면 이어진 요청에 대한 응답도 반환되지 않아 서버의 버퍼가 쓸데없이 소비되는 현상)
 
@@ -80,7 +80,7 @@
     - 서버로부터 데이터를 조회하는 용도
     - URL에 파라미터를 포함하여 데이터 전송
     - 브라우저 히스토리에 기록이 남음
-    - 북마크 가능
+    - 북마크 가능 (URL만으로 모든 정보를 담을 수 있음)
     - 데이터 길이에 제한이 있음
     - 캐싱 가능
 - POST 메소드:
