1030_트랜스포트 계층 QnA.md 업데이트

--- a/eunah/1030_트랜스포트 계층 QnA.md
+++ b/eunah/1030_트랜스포트 계층 QnA.md
@@ -4,7 +4,12 @@
 
 트랜스포트 계층은 서로 다른 호스트에서 동작하는 애플리케이션 프로세스 간의 논리적 통신을 제공하는 계층입니다. 
 
-네트워크 구조에서 애플리케이션 계층과 네트워크 계층 사이에 위치하며, 종단 시스템에서만 구현됩니다.
+신뢰성 있고 안정성 있는 전송을 해야 할 때 필요한 계층
+
+패킷이 정상적으로 보내졌는지, 중간에 유실된 정보는 없는지, 여러 개의 패킷을 보낼 때 순서가 뒤바뀐 것은 없는지 등을 확인해야 할 때 패킷의 흐름을 제어하거나 전송 오류를 점검
+
+포트라는 정보를 통해 실행 중인 응용 프로그램의 식별
+
 
 ### **Q2: 트랜스포트 계층의 주요 기능은 무엇인가요?**
 
